  - changed delimiter for INCLUDE system variable to ':'

* filewiki-0.21
  - added video support for Gallery plugin
  - minor bugfixes

* filewiki-0.30
  - more generic approach for image resizes and still image commands
  - enhancements in exif info table
  - fixed gallery trail: trail goes down as long as gallery_trail variable is set
  - moved all gallery templates to common template directory
  - added INCLUDE_VARS system variable
  - added FileWiki::Plugin::CSS, with template and minimizing support
  - added FileWiki::Plugin::JavaScript, with minimizing support
  - fixed INCLUDE variable handling
  - added EXIF sidecar support (GALLERY_SIDECAR_POSTFIX variable)
  - renamed GALLERY_RESIZE_<TYPE> to GALLERY_IMAGE_<TYPE>

* filewiki-current
  - generate XHTML in FileWiki::Plugin::POD
  - Template::Plugin::FileWiki->PageTree() generates <ul class="collapse">
  - Template::Plugin::FileWiki->PageTree() generates "highlight" class in <li> instead of <a>
  - adapted plugin framework to allow vars-provider plugins
  - added FileWiki::Plugin::Git, which provides variables such as "git commit date"
  - enhanced support of variable expansion:
    - support variable expansion in form: ${myvar} and ${myvar//match/replace}
    - support variable late expansion in form: ${{myvar}} and ${{myvar//match/replace}}
    - support logical expressions in form: $(( [[!]CONDITION:] EXPR0 || EXPR1 || ... ))
    - removed obsolete MATCH_<var> and DIR_MATCH_<var> hacks, this can
      now be solved with variable substitution
  - Gallery changes:
    - added GALLERY_DISABLE_EXIF_WARNINGS
    - gallery templates: refactoring of gallery mosaic display (use
      display-block instead of tables): introduced new mosaic_* classes.
    - gallery templates: support for smartphones (two columns, fixed to
      50% width) and tablets (resized images, maximum height of 120px)
    - gallery templates: added mobile_view variable